...
        android:title="Home" />

    <item android:id="@+id/ic_Profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="Profile" />

    <item android:id="@+id/ic_Jobs"
        android:icon="@drawable/ic_baseline_work_24"
        android:title="Jobs" />

    <item android:id="@+id/ic_Settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="Settings"
...
