...
        android:textSize="30sp"
        android:textStyle="bold" />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginVertical="55dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/apprecycler"
        />

</FrameLayout>
