...


   <com.google.android.material.bottomnavigation.BottomNavigationView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="#2E3540"
       android:id="@+id/btmNAV"
       app:layout_constraintBottom_toBottomOf="parent"
       app:menu="@menu/menu"
       app:itemTextColor="@color/white"
       app:itemIconTint="@color/white"
       />
</androidx.constraintlayout.widget.ConstraintLayout>
