...
        android:layout_marginVertical="2dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Accept Application"
            android:id="@+id/acceptbtn"
            android:visibility="invisible"
            android:backgroundTint="@color/white"
            tools:targetApi="lollipop" />

        <Button
            android:layout_width="wrap_content"
...
